Fix code blocks not wrapping

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -134,6 +134,7 @@ pre {
     font-size: 1em;
     border: 0;
     background-color: transparent !important;
+    white-space: pre-wrap;
   }
 }
 
